--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -22,6 +22,7 @@
                 <div id="qrcode"></div>
             </div>
         </div>
+        <div class="text-right" style="margin:20px">QRCode Generator for self</div>
     </div>
   <script type="text/javascript">
       (function($) {
