--- a/json/index.html
+++ b/json/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div style="margin:20px 0;text-align:right;">JSON viewer for self</div>
+        <div class="text-right" style="margin:20px">JSON viewer for self</div>
     </div>
   <script type="text/javascript">
       (function($) {
